objects/HS_Create_Lead__e.object
<CustomObject>
    <fields>
        <fullName>objecttype__c</fullName>
        <label>objecttype</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordid__c</fullName>
        <label>recordid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sessionId__c</fullName>
        <label>sessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HS Create Lead</label>
    <pluralLabel>HS create leads</pluralLabel>
</CustomObject>